--- a/characters/springfield.yml
+++ b/characters/springfield.yml
@@ -4,3 +4,5 @@ characters:
   name: Police Chief Wiggum
 - short_name: bleeding_gums_murphy
   name: Bleeding Gums Murphy
+- short_name: moe
+  name: Moe Szyslak
