--- a/episodes/season_22.yml
+++ b/episodes/season_22.yml
@@ -34,6 +34,7 @@ episodes:
   simpsonsworld_id: 263577155794
   good: maybe
   characters:
+    - treehouse_of_horror
 - title: Lisa Simpson, This Isn't Your Life
   season: 22
   episode: 5
