compile data in s2-s3

--- a/characters/simpsons.yml
+++ b/characters/simpsons.yml
@@ -14,3 +14,5 @@ characters:
   full_name: Abraham Jebediah Simpson
 - short_name: grandma_simpson
   full_name: Mona Simpson
+- short_name: santas_little_helper
+  full_name: Santa's Little Helper
