more of s15, add vignettes character

--- a/characters/compilations.yml
+++ b/characters/compilations.yml
@@ -12,3 +12,5 @@ characters:
   name: Treehouse of Horror
 - short_name: bullies
   name: Springfield School Bullies
+- short_name: vignettes
+  name: Vignettes
