the things i do for the movement

--- a/characters/power_plant.yml
+++ b/characters/power_plant.yml
@@ -1,7 +1,7 @@
 ---
 characters:
 - short_name: mr_burns
-  name: Mr. Burns
+  name: Mr. C. Montgomery Burns
 - short_name: smithers
   name: Waylon Smithers
 - short_name: lenny
